appId: com.pagerviewexample
#  tc93 [Logs] button after being tapped shows the logs 
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/regression TC Android/scrollable pager view example/tc78_scrollable_pagerView_example.yaml
- tapOn: "Logs"
- assertVisible: "Control"
- assertVisible: "Page 1 / 10 "
- tapOn: "Control"
- tapOn: "Next"
- tapOn: "Logs"
- assertVisible:
    text: "Position: 1 Offset: 0"
    index: 0
- assertVisible: "Page: 1"
- tapOn: "Control"
- tapOn: "Next"
- tapOn: "Logs"
- assertVisible: "Position: 2 Offset: 0"
- assertVisible: "Page: 2"
- tapOn: "Control"
- tapOn: "Next"
- tapOn: "Logs"
- assertVisible: "Position: 3 Offset: 0"
- assertVisible: "Page: 3"
- tapOn: "Control"
- tapOn: "Next"
- tapOn: "Logs"
- assertVisible: "Position: 4 Offset: 0"
- assertVisible: "Page: 4"
- tapOn: "Control"
- assertVisible: "Page 10 / 10 "
- clearState