appId: com.pagerviewexample
#  tc120 The TabBarIconExample tab is accessible
---
- launchApp
- assertVisible: PagerView Example
- swipe:
    start: "59%,61%"
    end: "62%,31%"
    duration: 306
- assertVisible: TabBarIconExample
- tapOn: TabBarIconExample
- assertVisible: TabBarIconExample