appId: com.pagerviewexample
#  tc124 Users can type in their message at the CHAT page, but sending functionality is not implemented
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/regression TC Android/tab bar icon example/tc120_TabBarIconExample.yaml
- tapOn: Write a message
- inputText: Muffin danish chocolate souffle pastry icing bonbon oat cake.
- waitForAnimationToEnd
- assertVisible: Muffin danish chocolate souffle pastry icing bonbon oat cake.
- clearState