appId: org.reactjs.native.example.FabricExample
# tc59 [Logs] button after being tapped shows the logs 
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/regression TC iOS/on page selected example/alert dialog dismissal_pager_OnPageSelected_example.yaml
- tapOn: "Logs"
- assertVisible: "Control"
- assertVisible: "Page: 0"
- tapOn: "Control"
- assertVisible: "Page 1 / 10 "
- tapOn: "Last"
- assertVisible: "You are on 10 page"
- tapOn: "OK"
- assertVisible:
    text: "Page Index: 9"
    index: 1
- tapOn: "Logs"
- assertVisible: "Position: 9 Offset: 0"
- assertVisible: "Page: 9"
- assertVisible: "Position: 0 Offset: 9"
- repeat:
    times: 3
    commands:
      - swipe:
          start: "73%,88%"
          end: "73%,70%"
          duration: 322
- assertVisible: "Page: 0"   
- clearState       
# - scrollUntilVisible:
#     element:
#       text: "Page: 0"
#     direction: DOWN