appId: org.reactjs.native.example.FabricExample
#  tc89 The [Remove last page] button enables the user to remove any last page one by one - equally vertically and horizontally 
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/regression TC iOS/scrollable pager view example/tc80_scrollable_pagerView_example.yaml
- repeat:
    times: 3
    commands:
      - tapOn: "Remove last page"
- assertVisible: "Page 1 / 7 "
- repeat:
    times: 6
    commands:
      - swipe:
          start: "81%,40%"
          end: "27%,33%"
          duration: 240
- assertVisible: "Page 7 / 7 "
- clearState