appId: ${APP_ID}
#  tc106 [Like] buttons on page 2 are clickable
---
- runFlow: tc99_nest_pagerView_example.yaml
- swipe:
    start: '75%,74%'
    end: '13%,67%'
    duration: 272
- assertVisible: 'There has two Nest PagerView with horizontal and vertical.'
- tapOn: "\U0001f44d Like 7 likes Horizontal"
- assertVisible: '8 likes'
- tapOn: "\U0001f44d Like 7 likes Vertical"
- assertVisible: '8 likes'
