appId: ${APP_ID}
# tc49 [Logs] button after being tapped shows the logs
# only for iOS, because Android returns different logs
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'OnPageScroll Example'
- tapOn:
    text: 'Logs'
- assertVisible: 'Control'
- assertVisible: 'Page: 0'
- tapOn: 'Control'
- tapOn: 'Next'
- tapOn: 'Logs'
- assertVisible:
    text: 'Position: 1 Offset: 0'
    index: 0
- assertVisible: 'Page: 1'
- tapOn: 'Control'
- tapOn: 'Next'
- tapOn: 'Logs'
- assertVisible: 'Position: 2 Offset: 0'
- assertVisible: 'Page: 2'
- tapOn: 'Control'
- tapOn: 'Next'
- tapOn: 'Logs'
- assertVisible: 'Position: 3 Offset: 0'
- assertVisible: 'Page: 3'
- tapOn: 'Control'
- tapOn: 'Next'
- tapOn: 'Logs'
- assertVisible: 'Position: 4 Offset: 0'
- assertVisible: 'Page: 4'
- tapOn: 'Control'
- assertVisible: 'Page 5 / 5 '
