appId: ${APP_ID}
# tc54 The [Add new page] button enables user to add any number of pages one by one
# flaky test on iOS
# for some reason on iOS there's sometimes one additional click that results in 24 pages
---
- launchApp
- runFlow: alert_dialog_dismissal_pager_OnPageSelected_example.yaml
- tapOn: 'Add new page'
- assertVisible: 'Page 1 / 11 '
- repeat:
    times: 12
    commands:
      - tapOn:
          text: 'Add new page'
          retryTapIfNoChange: false
- assertVisible: 'Page 1 / 23 '
- tapOn: 'Last'
- assertVisible: 'You are on 23 page'
- tapOn: 'OK'
- assertVisible: 'Page Index: 22'
- assertVisible: 'Page 23 / 23 '
