appId: ${APP_ID}
#  tc73 Users can swipe Pagination Dots Example pages from first to the last one
---
- launchApp
#- assertVisible: 'PagerView Example'
- tapOn: 'Pagination Dots Example'
- assertVisible: 'Page Index: 1'
- swipe:
    start: '84%,41%'
    end: '9%,45%'
    duration: 480
- assertVisible: 'Page Index: 2'
- swipe:
    start: '89%,35%'
    end: '10%,31%'
    duration: 352
- assertVisible: 'Page Index: 3'
- swipe:
    start: '79%,27%'
    end: '24%,22%'
    duration: 400
- assertVisible: 'Page Index: 4'
