appId: ${APP_ID}
#  tc120 The TabBarIconExample tab is accessible
---
- launchApp
- assertVisible: 'PagerView Example'
- swipe:
    start: '84%,74%'
    end: '94%,35%'
    duration: 354
- tapOn: 'TabBarIconExample'
- assertVisible: 'TabBarIconExample'
