appId: ${APP_ID}
#  tc83 A picture can be swiped horizontally as many times as Page numeration -1 shows
---
- runFlow: tc78_scrollable_pagerView_example.yaml
- repeat:
    times: 7
    commands:
      - tapOn:
          text: 'Remove last page'
          retryTapIfNoChange: false
- assertTrue: ${"Page 1 / 3 "}
- swipe:
    start: '74%,31%'
    end: '32%,31%'
    duration: 400
- swipe:
    start: '91%,36%'
    end: '29%,39%'
    duration: 434
- assertTrue: ${"Page 3 / 3 "}
