appId: ${APP_ID}
#  tc84 If the user taps the last (10th) picture from the top, swipes it left 7 times, and removes the last 7 pages, then the Page numeration is updated automatically
---
- runFlow: tc80_scrollable_pagerView_example.yaml
- swipe:
    direction: LEFT
- assertTrue: ${"Page 2 / 10 "}
- swipe:
    direction: LEFT
- waitForAnimationToEnd:
    timeout: 2000
- assertTrue: ${"Page 3 / 10 "}
- swipe:
    direction: LEFT
- waitForAnimationToEnd:
    timeout: 2000
- assertTrue: ${"Page 4 / 10 "}
- swipe:
    direction: LEFT
- waitForAnimationToEnd:
    timeout: 2000
- assertTrue: ${"Page 5 / 10 "}
- swipe:
    direction: LEFT
- waitForAnimationToEnd:
    timeout: 2000
- assertTrue: ${"Page 6 / 10 "}
- swipe:
    direction: LEFT
- waitForAnimationToEnd:
    timeout: 2000
- assertTrue: ${"Page 7 / 10 "}
- swipe:
    direction: LEFT
- waitForAnimationToEnd:
    timeout: 2000
- assertTrue: ${"Page 8 / 10 "}
- repeat:
    times: 7
    commands:
      - tapOn:
          text: 'Remove last page'
          retryTapIfNoChange: false
- assertTrue: ${"Page 1 / 3 "}
