appId: ${APP_ID}
#  tc85 When the [Remove last page] button is taped then last image from vertical and horizontal views are removed
---
- runFlow: tc80_scrollable_pagerView_example.yaml
- assertVisible: 'Page 1 / 10 '
- tapOn: 'Remove last page'
- assertVisible: 'Page 1 / 9 '
- repeat:
    times: 9
    commands:
      - swipe:
          start: '70%,40%'
          end: '23%,35%'
          duration: 318
- assertVisible: 'Page 9 / 9 '
- repeat:
    times: 3
    commands:
      - tapOn: 'Remove last page'
- assertVisible: 'Page 6 / 6 '
- repeat:
    times: 5
    commands:
      - swipe:
          start: '28%,35%'
          end: '94%,40%'
          duration: 418
- assertVisible: 'Page 1 / 6 '
