appId: ${APP_ID}
#  tc89 The [Remove last page] button enables the user to remove any last page one by one - equally vertically and horizontally
---
- runFlow: tc80_scrollable_pagerView_example.yaml
- repeat:
    times: 3
    commands:
      - tapOn: 'Remove last page'
- assertVisible: 'Page 1 / 7 '
- repeat:
    times: 6
    commands:
      - swipe:
          start: '81%,40%'
          end: '27%,33%'
          duration: 240
- assertVisible: 'Page 7 / 7 '
